# hmatrix-sundials

./: .gitignore  LICENSE  README.md  default.nix  flake.nix  hmatrix-sundials.cabal  release.nix  shell.nix
.github/workflows/: ci.yml
CustomSundials/: default.nix
benchmark/: benchmark.hs
src/: helpers.c  helpers.h
src/Numeric/: Sundials.hs
src/Numeric/Sundials/: ARKode.hs  CVode.hs  Common.hs  Foreign.hsc  IDA.hs  MainLoop.hs  Solver.hs  Types.hs
src/Numeric/Sundials/Bindings/: ARKode.hs  CVode.hs  IDA.hs  Sundials.hs
tests/: test.hs
tests/golden/ARKode/ARKMethod FEHLBERG_6_4_5/: Bounded_sine.json  Cascading_events.json  Discontinuous_derivative.json  Exponential.json  Modulus_recordEvent=False_initStep=1-eps.json  Modulus_recordEvent=False_initStep=1.json  Modulus_recordEvent=False_initStep=Nothing.json  Modulus_recordEvent=True_initStep=1-eps.json  Modulus_recordEvent=True_initStep=1.json  Modulus_recordEvent=True_initStep=Nothing.json  Robertson.json  Time aliasing; record=False.json  Time aliasing; record=True.json  Time grid test.json  Time-based events.json  maxStep=5e-1.json  maxStep=Nothing.json
tests/golden/ARKode/ARKMethod SDIRK_5_3_4/: Bounded_sine.json  Cascading_events.json  Discontinuous_derivative.json  Exception_in_condition.json  Exponential.json  Modulus_recordEvent=False_initStep=1-eps.json  Modulus_recordEvent=False_initStep=1.json  Modulus_recordEvent=False_initStep=Nothing.json  Modulus_recordEvent=True_initStep=1-eps.json  Modulus_recordEvent=True_initStep=1.json  Modulus_recordEvent=True_initStep=Nothing.json  Robertson.json  Stiffish.json  Time aliasing; record=False.json  Time aliasing; record=True.json  Time grid test.json  Time-based events.json  maxStep=5e-1.json  maxStep=Nothing.json
tests/golden/ARKode/ARKMethod TRBDF2_3_3_2/: Bounded_sine.json  Cascading_events.json  Discontinuous_derivative.json  Exponential.json  Modulus_recordEvent=False_initStep=1-eps.json  Modulus_recordEvent=False_initStep=1.json  Modulus_recordEvent=False_initStep=Nothing.json  Modulus_recordEvent=True_initStep=1-eps.json  Modulus_recordEvent=True_initStep=1.json  Modulus_recordEvent=True_initStep=Nothing.json  Robertson.json  Stiffish.json  Time aliasing; record=False.json  Time aliasing; record=True.json  Time grid test.json  Time-based events.json  maxStep=5e-1.json  maxStep=Nothing.json
tests/golden/ARKode/FEHLBERG_6_4_5/: Bounded_sine.json  Cascading_events.json  Exponential.json  Modulus_recordEvent=False_initStep=Nothing.json  Modulus_recordEvent=True_initStep=1-eps.json  Modulus_recordEvent=True_initStep=1.json  Modulus_recordEvent=True_initStep=Nothing.json  Robertson.json  Time grid test.json
tests/golden/ARKode/SDIRK_5_3_4/: Stiffish.json
tests/golden/ARKode/TRBDF2_3_3_2/: Bounded_sine.json  Modulus_recordEvent=False_initStep=Nothing.json  Modulus_recordEvent=True_initStep=1.json  Modulus_recordEvent=True_initStep=Nothing.json  Robertson.json  Stiffish.json
tests/golden/CVode/ADAMS/: Bounded_sine.json
tests/golden/CVode/BDF/: Bounded_sine.json
tests/golden/CVode/CVMethod ADAMS/: Bounded_sine.json  Cascading_events.json  Exception_in_condition.json  Exponential.json  Modulus_recordEvent=False_initStep=1-eps.json  Modulus_recordEvent=False_initStep=Nothing.json  Modulus_recordEvent=True_initStep=1-eps.json  Modulus_recordEvent=True_initStep=1.json  Modulus_recordEvent=True_initStep=Nothing.json  Robertson.json  Stiffish.json  Time aliasing; record=False.json  Time grid test.json  Time-based events.json  maxStep=5e-1.json
tests/golden/CVode/CVMethod BDF/: Bounded_sine.json  Discontinuous_derivative.json  Exponential.json  Robertson.json  (+12 more)
tests/golden/canonical/: Robertson.json
(+80 files in other folders)
