cabal-version:       2.4
name:                hmatrix-sundials
version:             0.20.0.0
synopsis:            hmatrix interface to sundials
description:         An interface to the solving suite SUNDIALS.
license:             BSD-3-Clause
license-file:        LICENSE
author:              Dominic Steinitz
maintainer:          Roman Cheplyaka
copyright:           Dominic Steinitz 2018, Novadiscovery 2019
category:            Math
build-type:          Simple
extra-source-files:  ChangeLog.md, README.md, tests/golden/**/*.json

flag debug
  description: Perform debug logging
  default: False

library
  build-depends:       base >=4.10,
                       inline-c >=0.6,
                       vector >=0.12,
                       template-haskell >=2.12,
                       containers >=0.5,
                       split >=0.2,
                       hmatrix>=0.18,
                       deepseq,
                       mtl,
                       bytestring,
                       text,
                       aeson,
                       katip,
                       ghc-prim
  extra-libraries:     sundials_arkode
                       sundials_cvode
                       sundials_sunmatrixsparse
                       sundials_sunlinsolklu
                       suitesparseconfig
                       klu
  hs-source-dirs:      src
  exposed-modules:     Numeric.Sundials
  other-modules:       Numeric.Sundials.ARKode
                       Numeric.Sundials.CVode
                       Numeric.Sundials.Foreign
                       Numeric.Sundials.Common
  c-sources:           src/helpers.c
  default-language:    Haskell2010
  default-extensions:  NondecreasingIndentation
                       LambdaCase
                       RecordWildCards
                       NamedFieldPuns
                       ScopedTypeVariables
                       TemplateHaskell
                       QuasiQuotes
                       KindSignatures
                       TypeOperators
                       TypeSynonymInstances
                       FlexibleInstances
                       FlexibleContexts
                       AllowAmbiguousTypes
                       TypeApplications
                       DeriveGeneric
                       DeriveAnyClass
                       OverloadedStrings
  ghc-options:         -Wall
  if flag(debug)
    -- _GNU_SOURCE is needed for asprintf
    cpp-options: -DENABLE_DEBUG -D_GNU_SOURCE

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      tests
  main-is:             test.hs
  build-depends:
                       aeson,
                       aeson-pretty,
                       base,
                       bytestring,
                       filepath,
                       tasty,
                       tasty-hunit,
                       tasty-golden,
                       vector,
                       hmatrix,
                       hmatrix-sundials,
                       katip
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-missing-signatures -fno-omit-yields


benchmark benchmark
  type:
    exitcode-stdio-1.0
  hs-source-dirs:
    benchmark
  main-is:
    benchmark.hs
  default-language:
    Haskell2010
  build-depends:
    base,
    hmatrix,
    hmatrix-sundials,
    clock >= 0.7.1,
    optparse-applicative,
    cassava,
    bytestring
  ghc-options:
    -Wall -Wno-name-shadowing
  default-extensions:
    BangPatterns
    DeriveGeneric
    FlexibleInstances
    RecordWildCards
    NamedFieldPuns
